Getting all products and getting single product
