# src/docs/swagger.yaml
@@ -3082,7 +3082,7 @@ paths:
           default: 61b752aef305de70ea23ff86
       responses:
         200:
-          description: success, Category details
+          description: success, list of products
           content:
             application/json:
               schema:
@@ -3362,7 +3362,7 @@ paths:
     delete:
       tags:
         - Product - Category
-      summary: An admin, manager or productManager can delete the category based on id
+      summary: An admin, manager or productManager can delete the category based on id, but all the products of this category will also be deleted
       parameters:
         - name: id
           required: true
@@ -3605,6 +3605,102 @@ paths:
                     type: string
                     example: error message
 
+  /product/brand/products/{id}:
+    get:
+      tags:
+        - Product - Brand
+      summary: A logged in user can get all products based on brand Id
+      parameters:
+        - name: id
+          required: true
+          description: Enter the brand id
+          in: path
+          default: 61b752aef305de70ea23ff86
+      responses:
+        200:
+          description: success, list of products
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  products:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                        name:
+                          type: string
+                        shortDescription:
+                          type: string
+                        price:
+                          type: number
+                        mrp:
+                          type: number
+                        inStock:
+                          type: boolean
+                        thumbnail:
+                          type: object
+                          properties:
+                            publicId:
+                              type: string
+                            secureUrl:
+                              type: string
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+        404:
+          description: Brand your looking for not found, please try different id
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: Brand your looking for not found, please try different id
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: error
+                  message:
+                    type: string
+                    example: error message
+
   /product/brand/{id}:
     get:
       tags:
@@ -3791,7 +3887,7 @@ paths:
     delete:
       tags:
         - Product - Brand
-      summary: An admin, manager or productManager can delete the Brand based on id
+      summary: An admin, manager or productManager can delete the Brand based on id, but all the products of this brand will also be deleted
       parameters:
         - name: id
           required: true
